# New_DFT_Code

./: .gitignore  .gitmodules  CODE-MAP.md  PROJECT-LEDGER.md  TIDES_5yr_proposal.md  package-lock.json  patch-dirac-reasoning.sh  progress.txt  sample-WP1-tile-substrate.md  tree_full.txt  tree_nosuite.txt  tree_source.txt
tides/: AUDIT-REPORT.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GOVERNANCE.md  TASK-LEDGER.md  progress.txt  pyproject.toml
tides/api/jax_bridge/: __init__.py  tides_jax.py
tides/api/python/tests/: test_pyscf_crosscheck.py  test_wp10.py
tides/api/python/tides/: __init__.py  _native.cpp  ase_calculator.py  cli.py  config.py  core.py  (+3 more)
tides/bench/: ENGINE_OPTIMIZATION_RESEARCH.md  abacus_comparison_plan.md  audit_ledger.jsonl  audit_ledger_2026-07-16.md  audit_ledger_gga_screen_2026-07-17.md  bench_scale.py  benchmark_b3lyp_scales.py  benchmark_fair_comparison.py  benchmark_generic.py  collect_pyscf_reference.py  compare_gpupyscf_tides.py  comprehensive_benchmark.py  consolidated_report.py  four_route_check.py  gemm_algo_bench.cu  gpu4pyscf_benchmark.py  mpi_benchmark.py  nao_pyscf_benchmark.py  operation_profiler.py  optimization_ledger_2026-07-17.md  p20_mermin_verify.py  p2_vext_verify.py  pipeline_profiler.py  pipeline_profiler_results.json  profiling_ledger.json  pyscf_benchmark.py  pyscf_benchmark_results.json  pyscf_vs_tides_profile.py  qe_benchmark.py  quick_bench_opt.py  resource_monitor.py  roofline_analysis.cpp  roofline_analysis.py  roofline_analysis_measured.md  single_atom_check.py  single_atom_decompose.py  tides_engine_benchmark.py  tides_scf_vs_pyscf.py  tides_vs_gpu4pyscf.py  unified_benchmark.py
tides/bench/optimization/: comprehensive_benchmark.json  comprehensive_benchmark.md  pyscf_vs_tides_ledger.json
tides/bench/profiling_results/: BENCHMARK_LEDGER_2026-07-16.md  PROFILING_LEDGER.md  PYSCF_REFERENCE_FROZEN.json  clinical_profile_full.json  e1_profile_optimized.txt  e1_profile_wmma_optimized.txt  engine_profiles_raw.txt  fair_benchmark_p1_2026-07-20.json  four_route_ground_report_2026-07-18.md  gpu4pyscf_benchmark.json  gpu4pyscf_benchmark.md  gpupyscf_vs_tides.json  mpi_benchmark.json  mpi_benchmark.md  mpi_benchmark_summary.md  operation_profile.json  operation_profile.md  phase0_pp_cpu_diagnostic_2026-07-18.md  poisson_clinical_profile.json  poisson_substep_profile.json  qe_benchmark.json  qe_benchmark_1rep.json  tides_engine_benchmark.json  tides_engine_benchmark.md  tides_scf_vs_pyscf.json  tides_vs_gpu4pyscf.json  tides_vs_gpu4pyscf.md  unified_benchmark.json  unified_benchmark_2026-07-22_1045.json  unified_benchmark_3rep.json  xc_occupancy_report.md
tides/benchmarks/: piecewise_benchmark.py  scaling_benchmark.py
tides/ci/: .gitlab-ci.yml  hip_quarterly_gate.sh  nightly.sh  setup.sh
tides/ci/spack/: package.py
tides/cmake/: hip.cmake
tides/core/basis/: bsse.hpp  nao_generator.hpp  three_center.cu  three_center_gpu.hpp  two_center.cu  two_center_builder.hpp  two_center_gpu.hpp  two_center_integrals.hpp
tides/core/common/: config.hpp  logging.hpp  point_group.hpp  status.hpp  units.hpp
tides/core/dynamics/: aspc.hpp  aspc_extrapolation.hpp
tides/core/forces/: analytic_forces.hpp
tides/core/grid/: atomic_grid.hpp  blocked_ops.hpp  blocked_ops_gpu.cuh  collinear_spin_xc.hpp  cuda_stubs.cpp  dual_grid.hpp  gpu_arena.hpp  grid_blocking.hpp  isf_poisson.hpp  libxc_wrapper.hpp  poisson.hpp  poisson_fft.cu  poisson_fft_gpu.hpp  pp_build.cu  pp_build_gpu.hpp  prolate_ewald.hpp  qtt.hpp  rho_build.cu  rho_build.hpp  rho_build_gpu.hpp  st_gpu.cu  st_gpu.hpp  vmat_build.cu  vmat_build.hpp  vmat_build_gpu.hpp  xc.cu  xc.hpp  xc_gpu.hpp  xc_gpu_compat.cu
tides/core/ham/: ham_builder.hpp  hamiltonian_builder.hpp
tides/core/hybrids/: d3_dispersion.hpp  d4_dispersion.hpp  hse_screened_exchange.hpp  hse_screening.hpp
tides/core/io/: stage_dump.hpp
tides/core/parallel/: graph_partitioner.hpp  halo_exchange.hpp  mpi_nvshmem.hpp  multi_gpu.hpp
tides/core/scf/: broyden_mixer.hpp  energy_assembly.hpp  ewald.hpp  gto_integrals.hpp  hmat_dump.hpp  mermin.hpp  mixed_precision.hpp  molecule_driver.hpp  nao_driver.hpp  pp_angular_integral.hpp  pp_reference.hpp  scf_driver.hpp  stress.hpp
tides/core/solvers/: broker.cpp  broker.hpp
tides/core/tests/: benchmark.cpp  gap_integration_tests.cpp  gpu_regression_tests.cpp  physics_tests.cpp  xc_rung0_oracle.cpp
tides/core/tile/: bloch_phase.hpp  cuda_graph_scf.hpp  f64e_reference.hpp  gemm_grouped.cu  gemm_grouped.hpp  graphs.hpp  hip_compat.hpp  kpoints.hpp  layout.hpp  mixed_precision_scf.hpp  ops.hpp  ozaki.cu  ozaki.hpp  precision.hpp  qtt_scf.hpp  reduce_f64e.cpp  reduce_f64e.cu  reduce_f64e.hpp  spgemm_filtered.cu  spgemm_filtered.hpp  spgemm_filtered_cuda.hpp  tile_scf_integration.hpp
tides/core/verification/: a_posteriori_error.hpp  ab_harness.hpp  campaign_runner.hpp  competitor_farm.hpp  energy_metering.hpp  ladder_runner.hpp  regression_dashboard.hpp  rung6_physics_tests.cpp
tides/docs/: P4_benchmark_report.md  theory-manual.md  xc_tier0_x0_design.md
tides/docs/sphinx/: Doxyfile  bibliography.bib  conf.py  index.rst  requirements.txt
tides/examples/: tutorial_01_single_point.py  tutorial_02_forces_optimization.py  tutorial_03_xlbomd_md.py  tutorial_04_toml_input.py  tutorial_05_solver_broker.py
tides/perf/: README.md  architecture-plan-nao-pp-cpu-pipeline.md  context-brief-full-benchmark-readiness.md  model-ledger.md  summarize_cpu.py  task-ledger.md
tides/perf/logs/: wp1_gpu_20260705T192428Z.txt  wp2_cpu_20260705T191837Z.jsonl
tides/tmp_bench_H2_r1/bench_H2_r1.save/: data-file-schema.xml
tides/tmp_bench_H2_r2/bench_H2_r2.save/: data-file-schema.xml
tides/tmp_bench_NH3_r0/bench_NH3_r0.save/: data-file-schema.xml
tides/tools/: auto_docs_generator.py  tilemat_hdf5.py
tides/verification/: tolerances.yaml
tides/verification/references/: gauntlet10.yaml
tides/verification/runners/: README.md  becke_terms_oracle.py  compare_pyscf_terms.py  fit_nao_gaussians.py  selftest_becke.py  selftest_synthetic.py
(+392 files in other folders)
